<resources>
    <string name="app_name">QueMePongo</string>
    <string name="signIn">Ingresar</string>
    <string name="signUp">Registrarse</string>
    <string name="forgottenPassword"><u>He olvidado mi contraseña</u></string>
    <string name="loading">Cargando</string>
    <string name="mail">Mail</string>
    <string name="password">Contraseña</string>
    <string name="register"><u>Registrarme</u></string>
    <string name="error">Error!</string>
    <string name="continuar">Continuar</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="description">Descripcion</string>
    <string name="primaryColor">Colores</string>
    <string name="clotheComposition">Tipo de tela</string>
    <string name="clotheType">Tipo de prenda</string>
    <string name="nombreDelGuardarropa">Nombre del guardarropa</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="crearGuardarropaIntro">Crea tu primer guardarropa para continuar</string>
    <string name="uploadPrenda">Crear prenda</string>
    <string name="notPrendasAviable">No tiene prendas disponibles en el guardarropa seleccionado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- DRAWER TEXT -->
    <string name="openDrawer">OPEN_DRAWER</string>
    <string name="closeDrawer">CLOSE_DRAWER</string>
    <string name="crearGuardarropa">Crear guardarropa</string>
    <string name="drawerGuardarropas">Guardarropas</string>
    <string name="drawerEventos">Eventos</string>
    <string name="drawerShowQr">Mostrar mi QR</string>
    <!-- END DRAWER TEXT -->


    <!-- CALENDAR TEXT -->
    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">M</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">Ok</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <!-- END CALENDAR TEXT -->
</resources>
