<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivityContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="40dp"
    android:background="@color/backgroundColor"
    tools:context=".View.Activity.LoginActivity">



    <LinearLayout
        android:id="@+id/LoginUserContainer"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_black"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginUserLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LoginPasswordContainer"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LoginUserContainer"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password"
            android:layout_gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginPasswordLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>





            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/LoginSignInButton"

                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LoginPasswordContainer"
                app:pb_colorComplete="@color/colorPrimarylight"
                app:pb_colorError="@color/error_color"
                app:pb_colorNormal="@color/colorAccent"
                app:pb_colorPressed="@color/colorAccentLight"
                app:pb_textError="@string/error"
                app:pb_textProgress="@string/loading" />


            <TextView
                android:id="@+id/LoginForgottenPasswordButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgottenPassword"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/LoginSignInButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/LoginRegisterButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/register"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/LoginForgottenPasswordButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                />





</androidx.constraintlayout.widget.ConstraintLayout>