<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar_layout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Activity.RegisterActivity"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp"
        android:paddingBottom="15dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/RegisterMailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegisterMail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/RegisterPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/RegisterMailLayout"
            android:layout_marginTop="15dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegisterPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints="password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/RegisterButton"

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:pb_colorComplete="@color/colorAccent"
            app:pb_colorError="@color/error_color"
            app:pb_colorNormal="@color/colorAccentLight"
            app:pb_colorPressed="@color/colorAccentDark"
            app:pb_textError="@string/error"
            app:pb_textProgress="@string/loading" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
