<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.CrearGuardarropaActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    >

    <include
        layout="@layout/toolbar_layout"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/crearGuardarropaIntroText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/crearGuardarropaNombreLayout"
            android:layout_marginBottom="100dp"
            android:padding="20dp"
            android:visibility="gone"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textColor="@color/colorSecondaryText"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crearGuardarropaIntro"
                android:textAlignment="center"
                android:textSize="18sp"

                />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/crearGuardarropaNombreLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/crearGuardarropaNombre"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/EditText"
                android:hint="@string/nombreDelGuardarropa"
                android:textSize="16sp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/crearGuardarropaButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/continuar"
            app:layout_constraintBottom_toBottomOf="parent"

            />


    </android.support.constraint.ConstraintLayout>


</LinearLayout>